--- a/package.json
+++ b/package.json
@@ -10,21 +10,33 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.8",
+        "@gsap/react": "^2.1.2",
+        "@hookform/resolvers": "^5.1.1",
+        "@tailwindcss/vite": "^4.1.10",
+        "@tanstack/react-query": "^5.80.7",
+        "@tanstack/react-router": "^1.121.16",
+        "@tanstack/react-router-devtools": "^1.121.16",
+        "axios": "^1.10.0",
         "clsx": "^2.1.1",
+        "gsap": "^3.13.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-hook-form": "^7.58.1",
         "sonner": "^2.0.5",
         "tailwind-merge": "^3.3.0",
         "tailwind-variants": "^1.0.0",
-        "tailwindcss": "^4.1.8"
+        "tailwindcss": "^4.1.10",
+        "zod": "^3.25.67"
     },
     "devDependencies": {
+        "@tanstack/router-plugin": "^1.121.16",
+        "@types/node": "^24.0.3",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
         "@vitejs/plugin-react-swc": "^3.9.0",
         "globals": "^16.0.0",
         "typescript": "~5.8.3",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "vite-tsconfig-paths": "^5.1.4"
     }
 }
