--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tanstack/react-query": "^5.80.7",
         "@tanstack/react-router": "^1.121.16",
         "@tanstack/react-router-devtools": "^1.121.16",
+        "@vite-pwa/assets-generator": "^1.0.0",
         "axios": "^1.10.0",
         "clsx": "^2.1.1",
         "gsap": "^3.13.0",
@@ -30,13 +31,14 @@
     },
     "devDependencies": {
         "@tanstack/router-plugin": "^1.121.16",
-        "@types/node": "^24.0.3",
+        "@types/node": "^24.0.7",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
         "@vitejs/plugin-react-swc": "^3.9.0",
         "globals": "^16.0.0",
         "typescript": "~5.8.3",
         "vite": "^6.3.5",
+        "vite-plugin-pwa": "^1.0.1",
         "vite-tsconfig-paths": "^5.1.4"
     }
 }
